<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhitesmoke">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weahter_tv"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:textColor="@color/colorSeagreen"
        android:textSize="30sp"
        android:text="@string/weather_fragment_main"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperature_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/temperature_fragment_main"
        android:textSize="65sp"
        android:layout_below="@id/weahter_tv"
        android:layout_margin="10dp"
        android:textColor="@color/colorSeagreen"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_below="@id/temperature_tv">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_fragment_main"
            android:textColor="@color/colorSeagreen"
            android:id="@+id/humidity_tv"/>
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wind_direction_tv"
            android:text="@string/wind_direction_fragment_main"
            android:textColor="@color/colorSeagreen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/updatetime_tv"
            android:text="@string/updatetime_fragment_main"
            android:textColor="@color/colorSeagreen"/>
            />

    </LinearLayout>
</RelativeLayout>